feat: add API versioning and context paths
BREAKING CHANGE: APIs changed
