# client/src/main/resources/api-docs-microservice2.json
@@ -1,36 +1,31 @@
 {
-  "openapi": "3.0.3",
+  "openapi": "3.0.1",
   "info": {
-    "title": "Api Documentation",
-    "description": "Api Documentation",
-    "termsOfService": "urn:tos",
-    "contact": {},
+    "title": "Microservice2 API",
+    "description": "Spring Cloud Application - Microservice2",
     "license": {
-      "name": "Apache 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+      "name": "MIT",
+      "url": "https://opensource.org/license/mit/"
     },
-    "version": "1.0"
+    "version": "0.0.1"
+  },
+  "externalDocs": {
+    "description": "ShowMeYourCodeYouTube - GitLab",
+    "url": "https://gitlab.com/ShowMeYourCodeYouTube"
   },
   "servers": [
     {
-      "url": "http://localhost:8002",
-      "description": "Inferred Url"
-    }
-  ],
-  "tags": [
-    {
-      "name": "microservice-2-controller-impl",
-      "description": "Microservice 2 Controller Impl"
+      "url": "http://localhost:8200/microservice2",
+      "description": "Generated server url"
     }
   ],
   "paths": {
-    "/api/microservice2": {
+    "/api/v1": {
       "get": {
         "tags": [
-          "microservice-2-controller-impl"
+          "microservice-2-endpoint-impl"
         ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingGET",
+        "operationId": "getMicroserviceName_4",
         "responses": {
           "200": {
             "description": "OK",
@@ -41,24 +36,14 @@
                 }
               }
             }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       },
       "put": {
         "tags": [
-          "microservice-2-controller-impl"
+          "microservice-2-endpoint-impl"
         ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingPUT",
+        "operationId": "getMicroserviceName",
         "responses": {
           "200": {
             "description": "OK",
@@ -69,27 +54,14 @@
                 }
               }
             }
-          },
-          "201": {
-            "description": "Created"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       },
       "post": {
         "tags": [
-          "microservice-2-controller-impl"
+          "microservice-2-endpoint-impl"
         ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingPOST",
+        "operationId": "getMicroserviceName_5",
         "responses": {
           "200": {
             "description": "OK",
@@ -100,27 +72,14 @@
                 }
               }
             }
-          },
-          "201": {
-            "description": "Created"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
           }
         }
       },
       "delete": {
         "tags": [
-          "microservice-2-controller-impl"
+          "microservice-2-endpoint-impl"
         ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingDELETE",
+        "operationId": "getMicroserviceName_6",
         "responses": {
           "200": {
             "description": "OK",
@@ -131,24 +90,14 @@
                 }
               }
             }
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         }
       },
       "options": {
         "tags": [
-          "microservice-2-controller-impl"
+          "microservice-2-endpoint-impl"
         ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingOPTIONS",
+        "operationId": "getMicroserviceName_1",
         "responses": {
           "200": {
             "description": "OK",
@@ -159,24 +108,14 @@
                 }
               }
             }
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         }
       },
       "head": {
         "tags": [
-          "microservice-2-controller-impl"
+          "microservice-2-endpoint-impl"
         ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingHEAD",
+        "operationId": "getMicroserviceName_3",
         "responses": {
           "200": {
             "description": "OK",
@@ -187,24 +126,14 @@
                 }
               }
             }
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         }
       },
       "patch": {
         "tags": [
-          "microservice-2-controller-impl"
+          "microservice-2-endpoint-impl"
         ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingPATCH",
+        "operationId": "getMicroserviceName_2",
         "responses": {
           "200": {
             "description": "OK",
@@ -215,43 +144,6 @@
                 }
               }
             }
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          }
-        }
-      },
-      "trace": {
-        "tags": [
-          "microservice-2-controller-impl"
-        ],
-        "summary": "getMicroserviceName",
-        "operationId": "getMicroserviceNameUsingTRACE",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "204": {
-            "description": "No Content"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         }
       }
